[package]
name = "marketplace-contract"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "marketplace_contract"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[profile.release]
overflow-checks = true

[dependencies]
anchor-lang = "0.25.0"
anchor-spl = "0.25.0"
solana-program = "~1.10.7"
mpl-token-metadata = { version = "1.2.7", features = ["no-entrypoint"] }
spl-associated-token-account = "1.0"